# fcitx5-fbterm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  fcitx5-fbterm.cpp  fcitx5-fbterm.h  imapi.c  imapi.cpp  imapi.h  immessage.h  keycode.c  keycode.cpp  keycode.h  keymap.cpp  keymap.h  utils.cpp  utils.h
src/: CMakeLists.txt  fcitx5-fbterm.cpp  imapi.cpp  imapi.h  immessage.h  input_key.h  keycode.cpp  keycode.h  keymap.cpp  keymap.h  utils.cpp  utils.h
